--- a/App-debug.html
+++ b/App-debug.html
@@ -17,6 +17,8 @@
     
         Rally.onReady(function() {
             Rally.loadScripts([
+                "js/underscore.js",
+                "js/defectFieldPicker.js",
                 "js/burncalculator.js",
                 "js/BurnChartBuilder.js",
                 "js/App.js"
