plotting valid data

--- a/App-debug.html
+++ b/App-debug.html
@@ -17,6 +17,7 @@
     
         Rally.onReady(function() {
             Rally.loadScripts([
+                "js/date.js",
                 "js/underscore.js",
                 "js/defectFieldPicker.js",
                 "js/burncalculator.js",
