Updated state selector to use BoxSelect instead of combobox

--- a/App-debug.html
+++ b/App-debug.html
@@ -17,6 +17,8 @@
     
         Rally.onReady(function() {
             Rally.loadScripts([
+                "js/BoxSelect.js",
+                "js/AttributeMultiComboBox.js",
                 "js/date.js",
                 "js/underscore.js",
                 "js/defectFieldPicker.js",
@@ -32,6 +34,7 @@
     </script>
 
 <link rel="stylesheet" type="text/css" href="css/app.css">
+<link rel="stylesheet" type="text/css" href="css/BoxSelect.css">
 </head>
 <body></body>
 </html>
