--- a/App-debug.html
+++ b/App-debug.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>BurnChartApp</title>
+    <title>On-Demand Custom Analytics</title>
 
     <script type="text/javascript" src="https://rally1.rallydev.com/apps/2.0p/sdk-debug.js"></script>
     
@@ -26,8 +26,8 @@
                 "js/BurnChartBuilder.js",
                 "js/App.js"
             ], function() {
-                Rally.launchApp('BurnChartApp', {
-                    name: 'BurnChartApp'
+                Rally.launchApp('OnDemandCustomAnalytics', {
+                    name: 'On-Demand Custom Analytics'
                 })
             });
         });
