reordered user stories and defects in type and canned reports

--- a/App.html
+++ b/App.html
@@ -3208,11 +3208,11 @@
             		this.reportStore = Ext.create('Ext.data.Store', {
             			fields: ['display'],
             			data: [
-                            {'display': 'Portfolio Items: Horizon 1 Must Haves'},
+                            {'display': 'Portfolio Items: Horizon 1 Must Haves'},				
+            				{'display': 'User Stories: In-Progress and Blocked'},
             				{'display': 'Defects: Not Closed, Released and Critical/High'},
             				{'display': 'Defects: Not Closed and Blocked'},
-            				{'display': 'Defects: Fixed/Resolved'},
-            				{'display': 'User Stories: In-Progress and Blocked'}
+            				{'display': 'Defects: Fixed/Resolved'}
             			],
             			filterInfo: {
                             "Portfolio Items: Horizon 1 Must Haves":{
@@ -3308,8 +3308,8 @@
             			fields: ['display', 'value'],
             			data: [
             				{'display': 'Portfolio Item', value: 'PortfolioItem'},
-            				{'display': 'Defect', value: 'Defect'},
             				{'display': 'User Story', value: 'HierarchicalRequirement'},
+            				{'display': 'Defect', value: 'Defect'},
             				{'display': 'Task', value: 'Task'}
             			]
             		});
